Update to a new snapshot towards 2.0.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ systemtap-1.3.tar.gz
 /systemtap-1.7.tar.gz
 /systemtap-1.8.tar.gz
 /systemtap-2.0pre-git10c737f.tar.gz
+/systemtap-2.0pre-gitec12f84.tar.gz
