--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ systemtap-1.3.tar.gz
 /systemtap-1.8.tar.gz
 /systemtap-2.0pre-git10c737f.tar.gz
 /systemtap-2.0pre-gitec12f84.tar.gz
+/systemtap-2.0.tar.gz
