--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.0pre-git10c737f.tar.gz
 /systemtap-2.0pre-gitec12f84.tar.gz
 /systemtap-2.0.tar.gz
+/systemtap-2.1pre-git3df148c.tar.gz
