--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.0.tar.gz
 /systemtap-2.1pre-git3df148c.tar.gz
 /systemtap-2.1-0.48.g345f009.tar.gz
+/systemtap-2.1-0.56.gf77181e.tar.gz
