--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.1-0.75.g02bff02.tar.gz
 /systemtap-2.1-0.87.gf4b122a.tar.gz
 /systemtap-2.1-0.97.g6a1a8f4.tar.gz
+/systemtap-2.1-0.100.g0f3edcb.tar.gz
