--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.2-0.74.gb1e0e10.tar.gz
 /systemtap-2.2-0.84.g74fc0fe.tar.gz
 /systemtap-2.2-0.94.g48bf64d.tar.gz
+/systemtap-2.2-0.103.g5c607f5.tar.gz
