--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.2-0.84.g74fc0fe.tar.gz
 /systemtap-2.2-0.94.g48bf64d.tar.gz
 /systemtap-2.2-0.103.g5c607f5.tar.gz
+/systemtap-2.2-0.104.gd142b86.tar.gz
