--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.2-0.94.g48bf64d.tar.gz
 /systemtap-2.2-0.103.g5c607f5.tar.gz
 /systemtap-2.2-0.104.gd142b86.tar.gz
+/systemtap-2.2-0.104.gd142b86.1.tar.gz
