--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.2-0.104.gd142b86.tar.gz
 /systemtap-2.2-0.104.gd142b86.1.tar.gz
 /systemtap-2.2-0.125.ga88f5ee.tar.gz
+/systemtap-2.2.tar.gz
