--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.2.tar.gz
 /systemtap-2.2.1.tar.gz
 /systemtap-2.3-0.44.g2c10863.tar.gz
+/systemtap-2.3-0.45.ge2a412f.tar.gz
