--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.3-0.212.gaeb08b1.tar.gz
 /systemtap-2.3-0.234.g54cbada.tar.gz
 /systemtap-2.3-0.244.gca49ae2.tar.gz
+/systemtap-2.3.tar.gz
