--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ systemtap-1.3.tar.gz
 /systemtap-2.4-0.173.g2576d05.tar.gz
 /systemtap-2.4-0.186.gc1cb76c.tar.gz
 /systemtap-2.4-0.233.g5c0aabb.tar.gz
+/systemtap-2.4.tar.gz
